Create Classrooms & Subjects from Student creation

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -212,6 +212,7 @@
 		"CLASSROOM_DELETE": "Möchten Sie diesen Klassenraum wirklich löschen?",
 		"CLASSROOM_DELETE_2": "Schüler, die sich in diesem Klassenzimmer befinden, hören auf zu sein",
 		"CLASSROOM_DELETE_OK": "Das Klassenzimmer wurde erfolgreich gelöscht",
+		"CLASSROOM_LIST_EMPTY": "Sie haben noch kein Klassenzimmer angelegt",
 		"CLASSROOM_UPDATE_OK": "Modifiziertes Klassenzimmer",
 		"DAY_ARCHIVE": "Sind Sie sicher, dass Sie diesen Datensatz archivieren wollen?",
 		"DAY_ARCHIVED_OK": "Datensatz korrekt abgelegt",
@@ -258,6 +259,7 @@
 		"SUBJECT_DELETE": "Möchten Sie diesen Betreff wirklich löschen?",
 		"SUBJECT_DELETE_2": "Studierende, die in diesem Fach eingeschrieben sind, hören auf zu sein",
 		"SUBJECT_DELETE_OK": "Der Betreff wurde erfolgreich gelöscht",
+		"SUBJECT_LIST_EMPTY": "Sie haben noch keine Themen erstellt",
 		"SUBJECT_UPDATE_OK": "Betreff geändert",
 		"THERE_IS_NO_ELEMENTS": "Es gibt keine Elemente mehr",
 		"WELCOME": "Hallo {{name}}!",
