--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -147,7 +147,7 @@
 		"MSG_2": "El cuerpo me pide",
 		"MSG_3": "Qué bien enseña mi profe de",
 		"MSG_4": "Te voy a invitar a un concierto de",
-		"MSG_5": "Interesante, un libro en morse sobre sobre",
+		"MSG_5": "Interesante, un libro en morse sobre",
 		"MSG_6": "Se me ha roto mi",
 		"MSG_7": "Una vez conocí a un reparador de",
 		"MSG_8": "Tengo un llavero con forma de",
@@ -212,6 +212,7 @@
 		"CLASSROOM_DELETE": "¿Estás seguro que quieres borrar este aula?",
 		"CLASSROOM_DELETE_2": "Los alumnos agrupados en este aula dejarán de estarlo",
 		"CLASSROOM_DELETE_OK": "Se ha borrado correctamente el aula",
+		"CLASSROOM_LIST_EMPTY": "No has creado ningún aula todavía",
 		"CLASSROOM_UPDATE_OK": "Aula modificada",
 		"DAY_ARCHIVE": "¿Estás seguro que quieres archivar este registro?",
 		"DAY_ARCHIVED_OK": "Registro archivado correctamente",
@@ -258,6 +259,7 @@
 		"SUBJECT_DELETE": "¿Estás seguro que quieres borrar esta asignatura?",
 		"SUBJECT_DELETE_2": "Los alumnos matriculados en esta asignatura dejarán de estarlo",
 		"SUBJECT_DELETE_OK": "Se ha borrado correctamente la asignatura",
+		"SUBJECT_LIST_EMPTY": "No has creado ninguna asignatura todavía",
 		"SUBJECT_UPDATE_OK": "Asignatura modificada",
 		"THERE_IS_NO_ELEMENTS": "No hay más elementos",
 		"WELCOME": "¡Hola {{name}}!",
