--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -212,6 +212,7 @@
 		"CLASSROOM_DELETE": "Sei sicuro di voler eliminare questa classe?",
 		"CLASSROOM_DELETE_2": "Gli studenti raggruppati in questa classe cesseranno di esserlo",
 		"CLASSROOM_DELETE_OK": "Classroom è stata eliminata correttamente",
+		"CLASSROOM_LIST_EMPTY": "Non hai ancora creato una classe",
 		"CLASSROOM_UPDATE_OK": "Aula modificata",
 		"DAY_ARCHIVE": "Sei sicuro di voler archiviare questo record?",
 		"DAY_ARCHIVED_OK": "Registrazione archiviata correttamente",
@@ -258,6 +259,7 @@
 		"SUBJECT_DELETE": "Sei sicuro di voler eliminare questo argomento?",
 		"SUBJECT_DELETE_2": "Gli studenti iscritti a questa materia cesseranno di esserlo",
 		"SUBJECT_DELETE_OK": "L'oggetto è stato cancellato con successo",
+		"SUBJECT_LIST_EMPTY": "Non hai ancora creato alcun soggetto",
 		"SUBJECT_UPDATE_OK": "Soggetto modificato",
 		"THERE_IS_NO_ELEMENTS": "Non ci sono più articoli",
 		"WELCOME": "Ciao {{name}}!",
