--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -212,6 +212,7 @@
 		"CLASSROOM_DELETE": "Are you sure you want to delete this classroom?",
 		"CLASSROOM_DELETE_2": "Students grouped in this classroom will cease to be",
 		"CLASSROOM_DELETE_OK": "Classroom has been deleted successfully",
+		"CLASSROOM_LIST_EMPTY": "You have not created a classroom yet",
 		"CLASSROOM_UPDATE_OK": "Modified classroom",
 		"DAY_ARCHIVE": "Are you sure you want to archive this record?",
 		"DAY_ARCHIVED_OK": "Record filed correctly",
@@ -258,6 +259,7 @@
 		"SUBJECT_DELETE": "Are you sure you want to delete this subject?",
 		"SUBJECT_DELETE_2": "Students enrolled in this subject will cease to be",
 		"SUBJECT_DELETE_OK": "The subject has been successfully deleted",
+		"SUBJECT_LIST_EMPTY": "You have not yet created any subjects",
 		"SUBJECT_UPDATE_OK": "Subject modified",
 		"THERE_IS_NO_ELEMENTS": "There are no more elements",
 		"WELCOME": "Hi {{name}}!",
