--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -212,6 +212,7 @@
 		"CLASSROOM_DELETE": "Voulez-vous vraiment supprimer cette classe?",
 		"CLASSROOM_DELETE_2": "Les élèves regroupés dans cette classe cesseront d'être",
 		"CLASSROOM_DELETE_OK": "La salle de classe a été supprimée avec succès",
+		"CLASSROOM_LIST_EMPTY": "Vous n'avez pas encore créé de classe",
 		"CLASSROOM_UPDATE_OK": "Salle de classe modifiée",
 		"DAY_ARCHIVE": "Êtes-vous sûr de vouloir archiver cet enregistrement ?",
 		"DAY_ARCHIVED_OK": "Dossier classé correctement",
@@ -258,6 +259,7 @@
 		"SUBJECT_DELETE": "Voulez-vous vraiment supprimer ce sujet?",
 		"SUBJECT_DELETE_2": "Les étudiants inscrits dans cette matière cesseront d'être",
 		"SUBJECT_DELETE_OK": "Le sujet a bien été supprimé",
+		"SUBJECT_LIST_EMPTY": "Vous n'avez pas encore créé de sujets",
 		"SUBJECT_UPDATE_OK": "Sujet modifié",
 		"THERE_IS_NO_ELEMENTS": "Il n'y a plus d'articles",
 		"WELCOME": "Salut {{name}}!",
