Clone classrooms and subjects

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -27,6 +27,7 @@
 	"CLEAN_ALL_FILTERS": "Alle Filter löschen",
 	"CLONE": "Klon",
 	"CLONE_CLASSROOM": "Klassenzimmer klonen",
+	"CLONE_ELEMENT": "Element klonen",
 	"CLONE_STUDENT": "Schüler klonen",
 	"CLONE_SUBJECT": "Thema klonen",
 	"CLOSE_MENU": "Menü schließen",
