--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,7 @@
 	"CLEAN_ALL_FILTERS": "Clear all filters",
 	"CLONE": "Clone",
 	"CLONE_CLASSROOM": "Clone classroom",
+	"CLONE_ELEMENT": "Clone element",
 	"CLONE_STUDENT": "Clone student",
 	"CLONE_SUBJECT": "Clone subject",
 	"CLOSE_MENU": "Close menu",
