--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -27,6 +27,7 @@
 	"CLEAN_ALL_FILTERS": "Borrar todos los filtros",
 	"CLONE": "Clonar",
 	"CLONE_CLASSROOM": "Clonar aula",
+	"CLONE_ELEMENT": "Clonar elemento",
 	"CLONE_STUDENT": "Clonar alumno",
 	"CLONE_SUBJECT": "Clonar asignatura",
 	"CLOSE_MENU": "Cerrar menú",
