--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -27,6 +27,7 @@
 	"CLEAN_ALL_FILTERS": "Effacer tous les filtres",
 	"CLONE": "Cloner",
 	"CLONE_CLASSROOM": "Classe clonée",
+	"CLONE_ELEMENT": "Élément de clonage",
 	"CLONE_STUDENT": "Étudiant clone",
 	"CLONE_SUBJECT": "Sujet du clone",
 	"CLOSE_MENU": "Fermer le menu",
