--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -27,6 +27,7 @@
 	"CLEAN_ALL_FILTERS": "Cancella tutti i filtri",
 	"CLONE": "Clone",
 	"CLONE_CLASSROOM": "Aula clone",
+	"CLONE_ELEMENT": "Elemento clone",
 	"CLONE_STUDENT": "Studente clone",
 	"CLONE_SUBJECT": "Soggetto clone",
 	"CLOSE_MENU": "Chiudi menu",
