--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -160,6 +160,7 @@
 		"BIRTHDATE": "Premere il calendario o inserire la data (GG/MM/AAAA)",
 		"CLASSROOM": "Puoi raggruppare gli studenti in diverse classi",
 		"CLASSROOM_STUDENT_LIST": "Seleziona gli studenti iscritti in questa classe",
+		"INSTRUMENT": "",
 		"OBSERVATIONS": "Aggiungi una breve descrizione dello studente",
 		"SUBJECTS": "Segna le materie che verranno insegnate allo studente",
 		"SUBJECT_STUDENT_LIST": "Seleziona gli studenti iscritti a questa materia",
@@ -319,9 +320,14 @@
 	"STUDENTS": "Scuola",
 	"STUDENT_ARCHIVED": "Studente archiviato",
 	"STUDENT_CONSERVATORY_DATA": "Conservatorio",
+	"STUDENT_CREATION_CLASSROOM": "",
+	"STUDENT_CREATION_CONSERVATORY": "",
+	"STUDENT_CREATION_CONTACT": "",
+	"STUDENT_CREATION_GENERAL DATA": "",
+	"STUDENT_CREATION_PERSONAL": "",
 	"STUDENT_DELETE": "Elimina studente",
 	"STUDENT_PARENTS_DATA": "Genitori",
-	"STUDENT_PERSONAL_DATA": "Studente",
+	"STUDENT_PERSONAL_DATA": "",
 	"SUBJECT": {
 		"CREATION_SUBTITLE": "Puoi aggiungere o modificare argomenti per insegnare ai tuoi studenti e iscriverne quanti ne hai bisogno"
 	},
