--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -160,7 +160,7 @@
 		"BIRTHDATE": "Press the calendar or enter the date (DD/MM/YYYY)",
 		"CLASSROOM": "You can group students in different classrooms",
 		"CLASSROOM_STUDENT_LIST": "Select the students enrolled in this classroom",
-		"INSTRUMENT": "",
+		"INSTRUMENT": "What instrument do you play?",
 		"OBSERVATIONS": "Add a brief description of the student",
 		"SUBJECTS": "Mark the subjects that will be taught to the student",
 		"SUBJECT_STUDENT_LIST": "Select the students enrolled in this subject",
@@ -320,14 +320,14 @@
 	"STUDENTS": "Students",
 	"STUDENT_ARCHIVED": "Filed student",
 	"STUDENT_CONSERVATORY_DATA": "Conservatory",
-	"STUDENT_CREATION_CLASSROOM": "",
-	"STUDENT_CREATION_CONSERVATORY": "",
-	"STUDENT_CREATION_CONTACT": "",
-	"STUDENT_CREATION_GENERAL DATA": "",
-	"STUDENT_CREATION_PERSONAL": "",
+	"STUDENT_CREATION_CLASSROOM": "To better organize your students, you can group them in different classrooms and enroll them in as many subjects as they need.",
+	"STUDENT_CREATION_CONSERVATORY": "Fill in the data related to the conservatory",
+	"STUDENT_CREATION_CONTACT": "Add one or more telephone numbers to contact him/her or his/her parents/guardians.",
+	"STUDENT_CREATION_GENERAL DATA": "General data",
+	"STUDENT_CREATION_PERSONAL": "Enter the student's personal data",
 	"STUDENT_DELETE": "Delete student",
 	"STUDENT_PARENTS_DATA": "Parents",
-	"STUDENT_PERSONAL_DATA": "",
+	"STUDENT_PERSONAL_DATA": "Personal data",
 	"SUBJECT": {
 		"CREATION_SUBTITLE": "You can add or modify subjects to teach your students and enroll as many as you need in them"
 	},
