--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -160,7 +160,7 @@
 		"BIRTHDATE": "Drücken Sie auf den Kalender oder geben Sie das Datum ein (TT/MM/JJJJ)",
 		"CLASSROOM": "Sie können Schüler in verschiedenen Klassenräumen gruppieren",
 		"CLASSROOM_STUDENT_LIST": "Wählen Sie die Schüler aus, die in diesem Klassenzimmer eingeschrieben sind",
-		"INSTRUMENT": "",
+		"INSTRUMENT": "Welches Instrument spielen Sie?",
 		"OBSERVATIONS": "Fügen Sie eine kurze Beschreibung des Schülers hinzu",
 		"SUBJECTS": "Markieren Sie die Fächer, die dem Schüler beigebracht werden",
 		"SUBJECT_STUDENT_LIST": "Wählen Sie die in diesem Fach eingeschriebenen Schüler aus",
@@ -320,14 +320,14 @@
 	"STUDENTS": "Studenten",
 	"STUDENT_ARCHIVED": "Abgelegter Student",
 	"STUDENT_CONSERVATORY_DATA": "Wintergarten",
-	"STUDENT_CREATION_CLASSROOM": "",
-	"STUDENT_CREATION_CONSERVATORY": "",
-	"STUDENT_CREATION_CONTACT": "",
-	"STUDENT_CREATION_GENERAL DATA": "",
-	"STUDENT_CREATION_PERSONAL": "",
+	"STUDENT_CREATION_CLASSROOM": "Um Ihre Schüler besser zu organisieren, können Sie sie in verschiedenen Klassenzimmern gruppieren und sie in so viele Fächer einschreiben, wie sie benötigen.",
+	"STUDENT_CREATION_CONSERVATORY": "Geben Sie die Daten für den Wintergarten ein",
+	"STUDENT_CREATION_CONTACT": "Fügen Sie eine oder mehrere Telefonnummern hinzu, um ihn/sie oder seine/ihre Eltern/Erziehungsberechtigten zu kontaktieren",
+	"STUDENT_CREATION_GENERAL DATA": "Allgemeine Daten",
+	"STUDENT_CREATION_PERSONAL": "Geben Sie die persönlichen Daten des Schülers ein",
 	"STUDENT_DELETE": "Schüler löschen",
 	"STUDENT_PARENTS_DATA": "Vater",
-	"STUDENT_PERSONAL_DATA": "",
+	"STUDENT_PERSONAL_DATA": "Persönliche Daten",
 	"SUBJECT": {
 		"CREATION_SUBTITLE": "Sie können Fächer hinzufügen oder ändern, um Ihren Schülern beizubringen und so viele Fächer einzuschreiben, wie Sie benötigen"
 	},
