--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -160,7 +160,7 @@
 		"BIRTHDATE": "Appuyez sur le calendrier ou entrez la date (JJ/MM/AAAA)",
 		"CLASSROOM": "Vous pouvez regrouper les élèves dans différentes classes",
 		"CLASSROOM_STUDENT_LIST": "Sélectionnez les étudiants inscrits dans cette classe",
-		"INSTRUMENT": "",
+		"INSTRUMENT": "De quel instrument jouez-vous ?",
 		"OBSERVATIONS": "Ajouter une brève description de l'élève",
 		"SUBJECTS": "Marquez les matières qui seront enseignées à l'élève",
 		"SUBJECT_STUDENT_LIST": "Sélectionnez les étudiants inscrits dans ce sujet",
@@ -320,14 +320,14 @@
 	"STUDENTS": "Élèves",
 	"STUDENT_ARCHIVED": "Étudiant classé",
 	"STUDENT_CONSERVATORY_DATA": "Conservatoire",
-	"STUDENT_CREATION_CLASSROOM": "",
-	"STUDENT_CREATION_CONSERVATORY": "",
-	"STUDENT_CREATION_CONTACT": "",
-	"STUDENT_CREATION_GENERAL DATA": "",
-	"STUDENT_CREATION_PERSONAL": "",
+	"STUDENT_CREATION_CLASSROOM": "Pour mieux organiser vos élèves, vous pouvez les regrouper dans différentes salles de classe et les inscrire à autant de matières qu'ils le souhaitent.",
+	"STUDENT_CREATION_CONSERVATORY": "Remplissez les données relatives à la véranda",
+	"STUDENT_CREATION_CONTACT": "Ajoutez un ou plusieurs numéros de téléphone pour le contacter ou contacter ses parents/tuteurs.",
+	"STUDENT_CREATION_GENERAL DATA": "Données générales",
+	"STUDENT_CREATION_PERSONAL": "Saisissez les données personnelles de l'élève",
 	"STUDENT_DELETE": "Supprimer l'élève",
 	"STUDENT_PARENTS_DATA": "Les pères",
-	"STUDENT_PERSONAL_DATA": "",
+	"STUDENT_PERSONAL_DATA": "Données personnelles",
 	"SUBJECT": {
 		"CREATION_SUBTITLE": "Vous pouvez ajouter ou modifier des matières pour enseigner à vos élèves et en inscrire autant que vous en avez besoin"
 	},
