--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,8 +13,10 @@
 	"AVATAR": "Profile image",
 	"BACK": "Return",
 	"BEHAVIOR": {
-		"PAN_SIDEMENU": "Slide menu",
-		"PAN_SIDEMENU_HINT": "Drag your finger horizontally across the screen to open the side menu",
+		"SLIDE_ROUTES": "Navigate by swiping",
+		"SLIDE_ROUTES_HINT": "Drag your finger horizontally across the main pages (students and daily) to move between them comfortably",
+		"SLIDE_SIDEMENU": "Slide menu",
+		"SLIDE_SIDEMENU_HINT": "Drag your finger horizontally across the screen to open the side menu",
 		"TITLE": "Behavior"
 	},
 	"CANCEL": "Cancel",
