Grid layout student list

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -335,6 +335,7 @@
 	},
 	"SUBJECTS": "Themen",
 	"SUBJECT_DELETE": "Betreff löschen",
+	"SWITCH_LAYOUT": "Alternatives Kartenlayout",
 	"TEACHER": "Lehrer",
 	"THEME": "Theme",
 	"THEMING": {
