--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -335,6 +335,7 @@
 	},
 	"SUBJECTS": "Subjects",
 	"SUBJECT_DELETE": "Delete subject",
+	"SWITCH_LAYOUT": "Alternate card layout",
 	"TEACHER": "Teacher",
 	"THEME": "Theme",
 	"THEMING": {
