--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -335,6 +335,7 @@
 	},
 	"SUBJECTS": "Asignaturas",
 	"SUBJECT_DELETE": "Borrar asignatura",
+	"SWITCH_LAYOUT": "Alternar disposición de tarjetas",
 	"TEACHER": "Profesor",
 	"THEME": "Tema",
 	"THEMING": {
