--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -335,6 +335,7 @@
 	},
 	"SUBJECTS": "Sujets",
 	"SUBJECT_DELETE": "Supprimer le sujet",
+	"SWITCH_LAYOUT": "Autre disposition des cartes",
 	"TEACHER": "Enseignant",
 	"THEME": "Thème",
 	"THEMING": {
