--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -335,6 +335,7 @@
 	},
 	"SUBJECTS": "Soggetti",
 	"SUBJECT_DELETE": "Elimina soggetto",
+	"SWITCH_LAYOUT": "Layout alternativo della carta",
 	"TEACHER": "Professore",
 	"THEME": "Tema",
 	"THEMING": {
