--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+	"ACCOUNT_CREATION_DATE": "Account created on",
 	"ACTION_NOT_REVERSED": "This action cannot be reversed.",
 	"ADD_STUDENT": "Add student",
 	"ADVANCED_FILTERS": "Advanced Filters",
@@ -266,6 +267,7 @@
 		"SUBJECT_LIST_EMPTY": "You have not yet created any subjects",
 		"SUBJECT_UPDATE_OK": "Subject modified",
 		"THERE_IS_NO_ELEMENTS": "There are no more elements",
+		"USER_UPDATE_OK": "Modified user",
 		"WELCOME": "Hi {{name}}!",
 		"WILL_LOSE_THE_CHANGES": "If you continue you will lose all changes that have not been saved",
 		"YES_ACCOUNT": "Do you already have an account?"
