--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -1,4 +1,5 @@
 {
+	"ACCOUNT_CREATION_DATE": "Account creato il",
 	"ACTION_NOT_REVERSED": "Questa azione non può essere annullata.",
 	"ADD_STUDENT": "Aggiungi studente",
 	"ADVANCED_FILTERS": "Filtri avanzati",
@@ -266,6 +267,7 @@
 		"SUBJECT_LIST_EMPTY": "Non hai ancora creato alcun soggetto",
 		"SUBJECT_UPDATE_OK": "Soggetto modificato",
 		"THERE_IS_NO_ELEMENTS": "Non ci sono più articoli",
+		"USER_UPDATE_OK": "Utente modificato",
 		"WELCOME": "Ciao {{name}}!",
 		"WILL_LOSE_THE_CHANGES": "Se continui perderai tutte le modifiche che non sono state salvate",
 		"YES_ACCOUNT": "Hai già un account?"
