Coming soon translate

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -34,6 +34,7 @@
 	"CLONE_STUDENT": "Schüler klonen",
 	"CLONE_SUBJECT": "Thema klonen",
 	"CLOSE_MENU": "Menü schließen",
+	"COMING_SOON": "Demnächst verfügbar",
 	"CONFIRM_PASSWORD": "Passwort bestätigen",
 	"CONTACT": {
 		"PERSON": "Ansprechpartner",
