--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -34,6 +34,7 @@
 	"CLONE_STUDENT": "Clonar alumno",
 	"CLONE_SUBJECT": "Clonar asignatura",
 	"CLOSE_MENU": "Cerrar menú",
+	"COMING_SOON": "Próximamente",
 	"CONFIRM_PASSWORD": "Confirmar contraseña",
 	"CONTACT": {
 		"PERSON": "Persona de contacto",
