--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -34,6 +34,7 @@
 	"CLONE_STUDENT": "Étudiant clone",
 	"CLONE_SUBJECT": "Sujet du clone",
 	"CLOSE_MENU": "Fermer le menu",
+	"COMING_SOON": "Prochainement",
 	"CONFIRM_PASSWORD": "Confirmer mot de passe",
 	"CONTACT": {
 		"PERSON": "Personne de contact",
