--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -34,6 +34,7 @@
 	"CLONE_STUDENT": "Studente clone",
 	"CLONE_SUBJECT": "Soggetto clone",
 	"CLOSE_MENU": "Chiudi menu",
+	"COMING_SOON": "in arrivo",
 	"CONFIRM_PASSWORD": "Conferma password",
 	"CONTACT": {
 		"PERSON": "Persona di contatto",
