--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,7 @@
 	"CLONE_STUDENT": "Clone student",
 	"CLONE_SUBJECT": "Clone subject",
 	"CLOSE_MENU": "Close menu",
+	"COMING_SOON": "Coming soon",
 	"CONFIRM_PASSWORD": "Confirm password",
 	"CONTACT": {
 		"PERSON": "Contact Person",
