Associate subject to day

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -166,6 +166,7 @@
 		"CLASSROOM_STUDENT_LIST": "Wählen Sie die Schüler aus, die in diesem Klassenzimmer eingeschrieben sind",
 		"INSTRUMENT": "Welches Instrument spielen Sie?",
 		"OBSERVATIONS": "Fügen Sie eine kurze Beschreibung des Schülers hinzu",
+		"SUBJECT": "",
 		"SUBJECTS": "Markieren Sie die Fächer, die dem Schüler beigebracht werden",
 		"SUBJECT_STUDENT_LIST": "Wählen Sie die in diesem Fach eingeschriebenen Schüler aus",
 		"TITLE": "Fügen Sie einen kleinen beschreibenden Titel hinzu."
