--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -166,6 +166,7 @@
 		"CLASSROOM_STUDENT_LIST": "Seleccione los alumnos matriculados en este aula",
 		"INSTRUMENT": "¿Qué instrumento toca?",
 		"OBSERVATIONS": "Añade una breve descripción del alumno",
+		"SUBJECT": "Asignatura del registro",
 		"SUBJECTS": "Marque las asignaturas que le impartirá al alumno",
 		"SUBJECT_STUDENT_LIST": "Seleccione los alumnos matriculados en esta asignatura",
 		"TITLE": "Añade un pequeño título descriptivo."
