--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -166,6 +166,7 @@
 		"CLASSROOM_STUDENT_LIST": "Sélectionnez les étudiants inscrits dans cette classe",
 		"INSTRUMENT": "De quel instrument jouez-vous ?",
 		"OBSERVATIONS": "Ajouter une brève description de l'élève",
+		"SUBJECT": "",
 		"SUBJECTS": "Marquez les matières qui seront enseignées à l'élève",
 		"SUBJECT_STUDENT_LIST": "Sélectionnez les étudiants inscrits dans ce sujet",
 		"TITLE": "Ajoutez un petit titre descriptif."
