--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -166,6 +166,7 @@
 		"CLASSROOM_STUDENT_LIST": "Seleziona gli studenti iscritti in questa classe",
 		"INSTRUMENT": "Che strumento suoni?",
 		"OBSERVATIONS": "Aggiungi una breve descrizione dello studente",
+		"SUBJECT": "",
 		"SUBJECTS": "Segna le materie che verranno insegnate allo studente",
 		"SUBJECT_STUDENT_LIST": "Seleziona gli studenti iscritti a questa materia",
 		"TITLE": "Aggiungi un piccolo titolo descrittivo."
