--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -77,7 +77,7 @@
 	"DELETE_ACCOUNT": {
 		"MSG": "Achtung! Diese Aktion kann nicht rückgängig gemacht werden.",
 		"MSG_2": "Wenn Sie Ihr Konto löschen, verlieren Sie alle Ihre Daten dauerhaft. Sind Sie sicher, dass Sie das tun wollen?",
-		"MSG_OK": "Sie wurden erfolgreich gelöscht. Wir hoffen, dass Sie bald wiederkommen werden.",
+		"MSG_OK": "Ihr Konto wurde erfolgreich gelöscht. Wir hoffen, dass Sie bald wiederkommen.",
 		"TITLE": "Konto löschen"
 	},
 	"DELETE_CLASSROOM": "Klassenzimmer löschen",
